--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,7 @@ path = "src/lib.rs"
 version = "0.5"
 default-features=false
 features = ["bevy_gltf", "bevy_winit", "bevy_wgpu", "render", "bevy_dynamic_plugin", "png", "hdr", "x11"]
+
+[dependencies.heron]
+version = "0.11.0"
+features = ["3d"]
