--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,17 +4,17 @@ members = ["core", "python"]
 [package]
 name = "nora"
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
 
 [lib]
 name = "nora_lib"
 path = "src/lib.rs"
 
 [dependencies.bevy]
-version = "0.5"
+version = "0.6"
 default-features=false
-features = ["bevy_gltf", "bevy_winit", "bevy_wgpu", "render", "bevy_dynamic_plugin", "png", "hdr", "x11"]
+features = ["bevy_gltf", "bevy_winit", "render", "bevy_dynamic_plugin", "png", "hdr", "x11"]
 
 [dependencies.heron]
-version = "0.11.0"
+version = "1.0.1-rc.1"
 features = ["3d"]
