--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -3,3 +3,8 @@ name = "nora_core"
 version = "0.1.0"
 edition = "2021"
 
+[dependencies]
+bevy = "0.7.0"
+bevy_egui = "0.13.0"
+heron = {version = "3.0.0", features=["3d"]}
+
