--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+nora_physics = { version = "0.1.0", path = "../nora_physics"}
 bevy = "0.7.0"
 bevy_egui = "0.13.0"
 heron = {version = "3.0.0", features=["3d"]}
