add tests for rigid body and collider
also restructured crates into separate crates folder

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["core", "nora_physics", "python"]
+members = ["crates/core", "crates/nora_physics", "crates/python"]
 
 [package]
 name = "nora"
@@ -20,6 +20,6 @@ version = "3.0.0"
 features = ["3d"]
 
 [dependencies]
-nora_physics = { version = "0.1.0", path = "nora_physics"}
-nora_core = { version = "0.1.0", path = "core"}
+nora_physics = { version = "0.1.0", path = "crates/nora_physics" }
+nora_core = { version = "0.1.0", path = "crates/core" }
 bevy_egui = "0.13"
