add normal and prepare for extension

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,4 +27,5 @@ features = ["3d"]
 [dependencies]
 nora_physics = { version = "0.1.0", path = "crates/nora_physics" }
 nora_core = { version = "0.1.0", path = "crates/core" }
+nora_raycast = { version = "0.1.0", path = "crates/nora_raycast"}
 bevy_egui = "0.13"
