Initial ray-cast support (#8)
Includes possibility to cast ray from mouse cursor and detect which mesh that was hit.

A lot of optimisation can be made and are in the pipe.

Authored-by: wynss <toniaxelsson@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,10 @@
 [workspace]
-members = ["crates/core", "crates/nora_physics", "crates/python"]
+members = [
+    "crates/core",
+    "crates/nora_physics",
+    "crates/nora_raycast",
+    "crates/python"
+]
 
 [package]
 name = "nora"
@@ -22,4 +27,5 @@ features = ["3d"]
 [dependencies]
 nora_physics = { version = "0.1.0", path = "crates/nora_physics" }
 nora_core = { version = "0.1.0", path = "crates/core" }
+nora_raycast = { version = "0.1.0", path = "crates/nora_raycast"}
 bevy_egui = "0.13"
