--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Install dependencies
+      run: apt install libasound2-dev
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
