--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,7 +16,8 @@ jobs:
 
     steps:
     - name: Install dependencies
-      run: apt install libasound2-dev
+      run: |
+        sudo apt-get install libasound2-dev -y
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
