--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - name: Install dependencies
       run: |
-        sudo apt-get install libasound2-dev -y
+        sudo apt-get install libasound2-dev libudev-dev -y
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
