rename and add unit test for triangle intersection

--- a/crates/nora_python/Cargo.toml
+++ b/crates/nora_python/Cargo.toml
@@ -10,5 +10,5 @@ crate-type = ["cdylib"]
 
 [dependencies]
 nora = { path= "../.." }
-nora_core = { path= "../core" }
+nora_core = { path= "../nora_core" }
 pyo3 = { version = "0.14.1", features = ["extension-module"] }
