--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [workspace]
 members = [
-    "crates/core",
+    "crates/nora_core",
     "crates/nora_physics",
     "crates/nora_raycast",
-    "crates/python"
+    "crates/nora_python"
 ]
 
 [package]
@@ -26,6 +26,6 @@ features = ["3d"]
 
 [dependencies]
 nora_physics = { version = "0.1.0", path = "crates/nora_physics" }
-nora_core = { version = "0.1.0", path = "crates/core" }
+nora_core = { version = "0.1.0", path = "crates/nora_core" }
 nora_raycast = { version = "0.1.0", path = "crates/nora_raycast"}
 bevy_egui = "0.13"
