--- a/crates/nora_physics/Cargo.toml
+++ b/crates/nora_physics/Cargo.toml
@@ -8,6 +8,7 @@ bevy = "0.7.0"
 rapier3d = "0.12.0"
 nalgebra = "0.31.0"
 fnv = "1.0.7"
+crossbeam = "0.8.1"
 
 [profile.dev.package.rapier3d]
 opt-level = 3
