--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = [
     "crates/nora_physics",
     "crates/nora_raycast",
     "crates/nora_python",
-    "crates/nora_object_interaction"
+    "crates/nora_object_interaction",
 ]
 
 [package]
@@ -24,4 +24,4 @@ nora_physics = { version = "0.1.0", path = "crates/nora_physics" }
 nora_core = { version = "0.1.0", path = "crates/nora_core" }
 nora_object_interaction = { version = "0.1.0", path = "crates/nora_object_interaction"}
 nora_raycast = { version = "0.1.0", path = "crates/nora_raycast"}
-bevy_egui = "0.13"
+bevy_egui = "0.14.0"
