--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,10 @@ members = [
     "crates/kesko_raycast",
     "crates/kesko_python",
     "crates/kesko_object_interaction",
+    "crates/kesko_models",
+    "crates/kesko_plugins",
+    "crates/kesko_ui",
+    "crates/kesko_diagnostic"
 ]
 
 [package]
@@ -19,3 +23,6 @@ kesko_physics = { version = "0.1.0", path = "crates/kesko_physics" }
 kesko_core = { version = "0.1.0", path = "crates/kesko_core" }
 kesko_object_interaction = { version = "0.1.0", path = "crates/kesko_object_interaction"}
 kesko_raycast = { version = "0.1.0", path = "crates/kesko_raycast"}
+kesko_models = { version = "0.1.0", path = "crates/kesko_models"}
+kesko_plugins = { version = "0.1.0", path="crates/kesko_plugins"}
+kesko_diagnostic = { version = "0.1.0", path="crates/kesko_diagnostic"}
