--- a/crates/kesko_models/Cargo.toml
+++ b/crates/kesko_models/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+serde = "1.0.137"
+serde_json = "1.0.81"
 bevy = "0.8.0"
 kesko_physics = { path = "../kesko_physics" }
 kesko_object_interaction = { path = "../kesko_object_interaction"}
