--- a/crates/kesko_physics/Cargo.toml
+++ b/crates/kesko_physics/Cargo.toml
@@ -9,6 +9,8 @@ rapier3d = "0.15.0"
 nalgebra = "0.31.0"
 fnv = "1.0.7"
 crossbeam = "0.8.1"
+serde = "1.0.137"
+serde_json = "1.0.81"
 
 [profile.dev.package.rapier3d]
 opt-level = 3
