restructure physics systems
physics system was not run in the way intended. Since the system right now depends on commands and commponents
they need to be run in separate stages since it is only across stages that commands are executed. The physics systems
now have a separate stage that comes after CoreStage::First. This stage contains sub stages that executes the physics systems.
In this way all the physics systems should be updated during one frame

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 Cargo.lock
 
 # python
+**/__pycache__/**
 /venv
 
 # vscode
@@ -15,4 +16,6 @@ dist/
 # mac
 .DS_Store
 
-**/__pycache__/**
+
+# Ignore traces
+trace-*.json
