--- a/crates/kesko_physics/Cargo.toml
+++ b/crates/kesko_physics/Cargo.toml
@@ -10,8 +10,9 @@ rapier3d = "0.15.0"
 nalgebra = "0.31.0"
 fnv = "1.0.7"
 crossbeam = "0.8.1"
-serde = "1.0.137"
+serde = { version = "1.0.137", features = ["derive"] }
 serde_json = "1.0.81"
+serde_traitobject = "0.2.7"
 
 [profile.dev.package.rapier3d]
 opt-level = 3
