--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,8 +24,16 @@ src = "src/main.rs"
 [[bin]]
 name = "kesko_tcp"
 
+# Enable a small amount of optimization in debug mode
+[profile.dev]
+opt-level = 1
+
+# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
+[profile.dev.package."*"]
+opt-level = 3
+
 [dependencies]
-bevy = "0.8.1"
+bevy = { version = "0.8.1", features = ["dynamic"] }
 kesko_physics = { version = "0.1.0", path = "crates/kesko_physics" }
 kesko_core = { version = "0.1.0", path = "crates/kesko_core" }
 kesko_object_interaction = { version = "0.1.0", path = "crates/kesko_object_interaction"}
