--- a/crates/kesko_physics/Cargo.toml
+++ b/crates/kesko_physics/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 bevy = "0.8.1"
 iyes_loopless = { git = "https://github.com/IyesGames/iyes_loopless.git", branch = "main"}
-rapier3d = "0.15.0"
+rapier3d = { git = "https://github.com/wynss/rapier.git" }
 nalgebra = "0.31.0"
 fnv = "1.0.7"
 crossbeam = "0.8.1"
