--- a/crates/kesko_physics/Cargo.toml
+++ b/crates/kesko_physics/Cargo.toml
@@ -3,10 +3,16 @@ name = "kesko_physics"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+default = ["f64"]
+f64 = ["dep:rapier3d-f64"]
+f32 = ["dep:rapier3d"]
+
 [dependencies]
 bevy = "0.8.1"
 iyes_loopless = { git = "https://github.com/IyesGames/iyes_loopless.git", branch = "main"}
-rapier3d = { git = "https://github.com/wynss/rapier.git" }
+rapier3d-f64 = { git = "https://github.com/wynss/rapier.git", optional = true }
+rapier3d = { git = "https://github.com/wynss/rapier.git", optional = true }
 nalgebra = "0.31.0"
 fnv = "1.0.7"
 crossbeam = "0.8.1"
@@ -14,5 +20,5 @@ serde = { version = "1.0.137", features = ["derive"] }
 serde_json = "1.0.81"
 serde_traitobject = "0.2.7"
 
-[profile.dev.package.rapier3d]
+[profile.dev.package.rapier3d_f64]
 opt-level = 3
