make all creates inherit the same bevy dep

--- a/crates/kesko_object_interaction/Cargo.toml
+++ b/crates/kesko_object_interaction/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = "0.8.1"
+bevy = { workspace = true }
 kesko_raycast = {version="0.1.0", path="../kesko_raycast"}
