--- a/crates/kesko_physics/Cargo.toml
+++ b/crates/kesko_physics/Cargo.toml
@@ -8,7 +8,7 @@ f64 = ["dep:rapier3d-f64"]
 f32 = ["dep:rapier3d"]
 
 [dependencies]
-bevy = "0.8.1"
+bevy = { workspace = true }
 iyes_loopless = { git = "https://github.com/IyesGames/iyes_loopless.git", branch = "main"}
 rapier3d-f64 = { git = "https://github.com/wynss/rapier.git", optional = true, features = ["serde-serialize"]}
 rapier3d = { git = "https://github.com/wynss/rapier.git", optional = true, features = ["serde-serialize"] }
