--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,8 +38,11 @@ opt-level = 3
 [profile.release]
 codegen-units = 1
 
+[workspace.dependencies]
+bevy = { version = "0.8.1", default-features = false, features = ["render", "bevy_winit", "bevy_scene", "x11"] }
+
 [dependencies]
-bevy = { version = "0.8.1" }
+bevy = { version = "0.8.1", default-features = false, features = ["render", "bevy_winit", "bevy_scene", "x11"] }
 kesko_physics = { version = "0.1.0", path = "crates/kesko_physics", features = ["f32"]}
 kesko_core = { version = "0.1.0", path = "crates/kesko_core" }
 kesko_object_interaction = { version = "0.1.0", path = "crates/kesko_object_interaction"}
