--- a/crates/kesko_core/Cargo.toml
+++ b/crates/kesko_core/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = "0.8.1"
+bevy = { workspace = true }
 serde = { version = "1.0.137", features = ["derive"] }
 serde_traitobject = "0.2.7"
 kesko_physics = { version = "0.1.0", path = "../kesko_physics" }
