--- a/crates/kesko_models/Cargo.toml
+++ b/crates/kesko_models/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = "0.8.1"
+bevy = { workspace = true }
 serde = "1.0.137"
 serde_json = "1.0.81"
 kesko_physics = { path = "../kesko_physics" }
