--- a/crates/kesko_models/Cargo.toml
+++ b/crates/kesko_models/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 bevy = { workspace = true }
+pyo3 = { version = "0.17.2", features = ["extension-module"] }
 serde = "1.0.137"
 serde_json = "1.0.81"
 kesko_physics = { path = "../kesko_physics" }
