--- a/crates/kesko_physics/Cargo.toml
+++ b/crates/kesko_physics/Cargo.toml
@@ -18,3 +18,4 @@ crossbeam = "0.8.1"
 serde = { version = "1.0.137", features = ["derive"] }
 serde_json = "1.0.81"
 serde_traitobject = "0.2.7"
+pyo3 = { version = "0.17.2", features = ["extension-module"] }
