--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,19 +15,35 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+
     - name: Install dependencies
       run: |
         sudo apt update
         sudo apt-get install libasound2-dev libudev-dev -y
+
     - name: Checkout repo
       uses: actions/checkout@v3
+
     - name: Install latest Rust nightly
       uses: actions-rs/toolchain@v1
       with:
         toolchain: nightly-2022-11-05
         override: true
-        components: rustfmt, clippy
-    - name: Build
+
+    - name: Kesko - Build
       run: cargo build --verbose
-    - name: Run tests
+      working-directory: ./kesko
+
+    - name: Kesko - Run tests
       run: cargo test --all --verbose
+      working-directory: ./kesko
+
+    - name: PyKesko - Build
+      run: cargo build --verbose
+      working-directory: ./pykesko
+
+    - name: PyKesko - Run tests
+      run: cargo test --all --verbose
+      working-directory: ./pykesko
+    
+
