update ci and add debug for pykesko build

--- a/.github/workflows/build_pykesko.yml
+++ b/.github/workflows/build_pykesko.yml
@@ -31,6 +31,9 @@ jobs:
 
       - name: Checkout repo
         uses: actions/checkout@v3
+
+      - name: Debug list files
+        run: ls -lh ./
       
       - name: Setup python
         uses: actions/setup-python@v4
