--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,16 +10,10 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
-
+  build-kesko:
+    name: "Build and test Kesko"
     runs-on: ubuntu-latest
-
     steps:
-
-    - name: Install dependencies
-      run: |
-        sudo apt update
-        sudo apt-get install libasound2-dev libudev-dev -y
 
     - name: Checkout repo
       uses: actions/checkout@v3
@@ -37,6 +31,20 @@ jobs:
     - name: Kesko - Run tests
       run: cargo test --all --verbose
       working-directory: ./kesko
+  
+  build-pykesko:
+    name: "Build and test PyKesko"
+    runs-on: ubuntu-latest
+    steps:
+
+    - name: Checkout repo
+      uses: actions/checkout@v3
+
+    - name: Install latest Rust nightly
+      uses: actions-rs/toolchain@v1
+      with:
+        toolchain: nightly-2022-11-05
+        override: true
 
     - name: PyKesko - Build
       run: cargo build --verbose
@@ -46,4 +54,3 @@ jobs:
       run: cargo test --all --verbose
       working-directory: ./pykesko
     
-
