--- a/.github/workflows/build_pykesko.yml
+++ b/.github/workflows/build_pykesko.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Debug list files
-        run: ls -lh ./
+        run: tree ../
       
       - name: Setup python
         uses: actions/setup-python@v4
