--- a/.github/workflows/build_pykesko.yml
+++ b/.github/workflows/build_pykesko.yml
@@ -31,15 +31,15 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Debug list files
-        run: tree ../
+        run: tree /home
       
       - name: Setup python
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
 
-      - name: Install python packages
-        run: pip install -U twine 'black>=22.3.0,<23' typing_extensions
+      # - name: Install python packages
+      #   run: pip install -U twine 'black>=22.3.0,<23' typing_extensions
 
       - name: Build wheels
         uses: PyO3/maturin-action@v1
