--- a/.github/workflows/build_pykesko.yml
+++ b/.github/workflows/build_pykesko.yml
@@ -42,7 +42,7 @@ jobs:
       #   run: pip install -U twine 'black>=22.3.0,<23' typing_extensions
 
       - name: Build wheels
-        uses: PyO3/maturin-action@v1
+        uses: actions/maturin-action@v1
         with:
           target: ${{ matrix.target }}
           manylinux: ${{ matrix.manylinux }}
