--- a/.github/workflows/build_pykesko.yml
+++ b/.github/workflows/build_pykesko.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Debug list files
-        run: tree /home
+        run: tree ${{ github.workspace }}
       
       - name: Setup python
         uses: actions/setup-python@v4
@@ -42,7 +42,7 @@ jobs:
       #   run: pip install -U twine 'black>=22.3.0,<23' typing_extensions
 
       - name: Build wheels
-        uses: actions/maturin-action@v1
+        uses: ./.github/actions/maturin-action
         with:
           target: ${{ matrix.target }}
           manylinux: ${{ matrix.manylinux }}
