--- a/.github/workflows/build_pykesko.yml
+++ b/.github/workflows/build_pykesko.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Debug list files
-        run: tree ${{ github.workspace }}
+        run: tree -a ${{ github.workspace }}
       
       - name: Setup python
         uses: actions/setup-python@v4
