--- a/pykesko/Cargo.toml
+++ b/pykesko/Cargo.toml
@@ -8,7 +8,7 @@ name = "pykesko"
 crate-type = ["cdylib"]
 
 [dependencies]
-bevy = "0.8.1"
+bevy = { version = "0.8.1", default-features = false, features = ["render", "bevy_winit", "bevy_scene", "x11"] }
 kesko = { path = "../kesko"}
 pyo3 = { version = "0.17.2", features = ["extension-module"] }
 serde = { version = "1.0.137" }
