--- a/.github/actions/maturin-action/action.yml
+++ b/.github/actions/maturin-action/action.yml
@@ -36,6 +36,9 @@ inputs:
       Rustup components.
       See https://rust-lang.github.io/rustup/concepts/components.html
     required: false
+  build-dir:
+    description: Which directory to call maturin from relative to the workspace directory
+    required: false
 
 runs:
   using: 'node16'
