test changing dir in command

--- a/.github/workflows/build_pykesko.yml
+++ b/.github/workflows/build_pykesko.yml
@@ -34,9 +34,6 @@ jobs:
 
       - name: Install python packages
         run: pip install -U twine 'black>=22.3.0,<23' typing_extensions
-      
-      - name: Test to switch directory
-        run: cd pykesko
 
       - name: Build wheels
         uses: ./.github/actions/maturin-action
@@ -48,7 +45,7 @@ jobs:
           build-dir: pykesko
       
       - name: List files in dist folder
-        run: ls -lh pykesko/dist/
+        run: ls -lh pykesko
 
       # - name: Check dist with twine
       #   run: twine check dist/*
