--- a/.github/workflows/build_pykesko.yml
+++ b/.github/workflows/build_pykesko.yml
@@ -27,9 +27,35 @@ jobs:
           name: linux-wheels
           path: pykesko/wheelhouse/
   
-  # macos-wheels:
-  #   name: Build wheels for MacOS
-  #   runs-on: macos-latest
+  macos-wheels:
+    name: Build wheels for MacOS
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        python-version: [3.7, 3.8, 3.9, 3.10, 3.11]
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+      - name: Install Rust nightly
+        uses: actions-rs/toolchain@v1
+        with:
+          targets: aarch64-apple-darwin
+          toolchain: nightly-2022-11-05
+          override: true
+      - name: Setup python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Build wheels
+        run: |
+          python3 -m pip install maturin
+          maturin build --release --universal2
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: osx-${{ matrix.python-version }}-wheel
+          path: target/wheels
+
 
   # build-wheels:
   #   name: Build Wheels on ${{ matrix.platform || matrix.os }} (${{ matrix.target }} - ${{ matrix.manylinux || 'auto' }})
