--- a/.github/workflows/build_pykesko.yml
+++ b/.github/workflows/build_pykesko.yml
@@ -31,8 +31,9 @@ jobs:
     name: Build wheels for MacOS
     runs-on: macos-latest
     strategy:
+      fail-fast: true
       matrix:
-        python-version: [3.7, 3.8, 3.9, 3.10, 3.11]
+        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
