--- a/.github/workflows/build_pykesko.yml
+++ b/.github/workflows/build_pykesko.yml
@@ -48,6 +48,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Build wheels
+        working-directory: pykesko
         run: |
           python3 -m pip install maturin
           maturin build --release --universal2
@@ -55,7 +56,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: osx-${{ matrix.python-version }}-wheel
-          path: target/wheels
+          path: pykesko/target/wheels
 
 
   # build-wheels:
