--- a/.github/workflows/build_pykesko.yml
+++ b/.github/workflows/build_pykesko.yml
@@ -6,7 +6,7 @@ on:
 jobs:
 
   linux-wheels:
-    name: Build wheels for linux
+    name: Build wheels for Linux
     runs-on: ubuntu-latest
     container: quay.io/pypa/manylinux2014_x86_64
     steps:
@@ -33,7 +33,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
+        python-version: ['3.9']
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -51,7 +51,7 @@ jobs:
         working-directory: pykesko
         run: |
           python3 -m pip install maturin
-          maturin build --release --universal2
+          maturin build --release
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
