try to compile for arm with container

--- a/.github/workflows/build_pykesko.yml
+++ b/.github/workflows/build_pykesko.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
         with:
-          targets: aarch64-apple-darwin
+          targets: aarch64-apple-darwin, x86_64-apple-darwin
           toolchain: nightly-2022-11-05
       - name: Setup python
         uses: actions/setup-python@v4
@@ -50,7 +50,7 @@ jobs:
         working-directory: pykesko
         run: |
           python3 -m pip install maturin
-          maturin build --release
+          maturin build --release --universal2
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
