--- a/.github/workflows/build_pykesko.yml
+++ b/.github/workflows/build_pykesko.yml
@@ -6,7 +6,7 @@ on:
 jobs:
 
   linux-wheels:
-    name: Build wheels for Linux
+    name: Build wheels for Linux (3.7-3.11)
     runs-on: ubuntu-latest
     container: quay.io/pypa/manylinux2014_x86_64
     steps:
@@ -24,7 +24,7 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: linux-wheels
+          name: wheels
           path: pykesko/wheelhouse/
   
   macos-wheels:
@@ -33,7 +33,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python-version: ['3.9']
+        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -54,7 +54,7 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: osx-${{ matrix.python-version }}-wheel
+          name: wheels
           path: pykesko/target/wheels
 
 
