--- a/.github/workflows/build_pykesko.yml
+++ b/.github/workflows/build_pykesko.yml
@@ -46,65 +46,43 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Build wheels
+      - name: Build universal wheels
         working-directory: pykesko
         run: |
           python3 -m pip install maturin
-          maturin build --release --universal2
+          maturin build --release --universal2 --interpreter python
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
           name: wheels
           path: pykesko/target/wheels
 
-
-  # build-wheels:
-  #   name: Build Wheels on ${{ matrix.platform || matrix.os }} (${{ matrix.target }} - ${{ matrix.manylinux || 'auto' }})
-  #   strategy:
-  #     fail-fast: true
-  #     matrix:
-  #       os: [ubuntu, macos]
-  #       manylinux: [auto]
-  #       interpreter: [3.9]
-  #       include:
-  #         - os: ubuntu
-  #           platform: linux
-  #           target: x86_64 
-  #         - os: macos
-  #           target: aarch64
-
-  #   runs-on: ${{ matrix.os }}-latest
-
-  #   steps:
-
-  #     - name: Checkout repo
-  #       uses: actions/checkout@v3
-      
-  #     - name: Setup python
-  #       uses: actions/setup-python@v4
-  #       with:
-  #         python-version: '3.9'
-
-  #     - name: Install python packages
-  #       run: pip install -U twine 'black>=22.3.0,<23' typing_extensions
-
-  #     - name: Build wheels
-  #       uses: ./.github/actions/maturin-action
-  #       with:
-  #         target: ${{ matrix.target }}
-  #         manylinux: ${{ matrix.manylinux }}
-  #         args: --release --out dist --interpreter ${{ matrix.interpreter }}
-  #         rust-toolchain: nightly-2022-11-05
-  #         build-dir: pykesko
-      
-  #     - name: List files in dist folder
-  #       run: ls -lh pykesko
-
-  #     # - name: Check dist with twine
-  #     #   run: twine check dist/*
-      
-  #     - name: Upload artifacts
-  #       uses: actions/upload-artifact@v3
-  #       with:
-  #         name: pypi_files
-  #         path: pykesko/dist
+  windows-wheels:
+    name: Build wheels for Windows
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
+        target: [x64, x86]
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: nightly-2022-11-05
+      - name: Setup python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+          architecture: ${{ matrix.target }}
+      - name: Build wheels
+        working-directory: pykesko
+        run: |
+          python -m pip install maturin
+          maturin build --release --interpreter python
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: wheels
+          path: pykesko/target/wheels
