--- a/pykesko/pyproject.toml
+++ b/pykesko/pyproject.toml
@@ -2,8 +2,9 @@
 name = "pykesko"
 version = "0.0.1"
 description = "Robotics Simulator written in Rust"
+readme = "../README.md"
 authors = [{ name = "Toni Axelsson", email = "toniaxelsson@gmail.com" }]
-licence = { file = "../../LICENSE" }
+licence = { file = "../LICENSE" }
 classifiers = [
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python",
@@ -12,7 +13,7 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.7"
 keywords = ["Robotics", "machine learning", "reinforcement learning"]
 dependencies = [
     "numpy",
