move to gymnasium and remove torch dep

--- a/pykesko/pyproject.toml
+++ b/pykesko/pyproject.toml
@@ -27,8 +27,7 @@ dependencies = [
     "numpy",
     "requests",
     "pydantic",
-    "torch",
-    "gym"
+    "gymnasium"
 ]
 
 [project.optional-dependencies]
