--- a/kesko/Cargo.toml
+++ b/kesko/Cargo.toml
@@ -14,7 +14,7 @@ members = [
 
 [package]
 name = "kesko"
-version = "0.1.0"
+version = "0.0.2"
 edition = "2021"
 
 [[bin]]
@@ -52,11 +52,11 @@ bevy = { version = "0.8.1", default-features = false, features = ["render", "bev
 
 pyo3 = { version = "0.17.2", features = ["extension-module"] }
 
-kesko_physics = { version = "0.1.0", path = "crates/kesko_physics", features = ["f32"] }
-kesko_core = { version = "0.1.0", path = "crates/kesko_core" }
-kesko_object_interaction = { version = "0.1.0", path = "crates/kesko_object_interaction" }
-kesko_raycast = { version = "0.1.0", path = "crates/kesko_raycast" }
-kesko_models = { version = "0.1.0", path = "crates/kesko_models" }
-kesko_plugins = { version = "0.1.0", path="crates/kesko_plugins" }
-kesko_diagnostic = { version = "0.1.0", path="crates/kesko_diagnostic" }
-kesko_tcp = { version = "0.1.0", path = "crates/kesko_tcp" }
+kesko_physics = { path = "crates/kesko_physics", features = ["f32"] }
+kesko_core = { path = "crates/kesko_core" }
+kesko_object_interaction = { path = "crates/kesko_object_interaction" }
+kesko_raycast = { path = "crates/kesko_raycast" }
+kesko_models = { path = "crates/kesko_models" }
+kesko_plugins = { path="crates/kesko_plugins" }
+kesko_diagnostic = { path="crates/kesko_diagnostic" }
+kesko_tcp = { path = "crates/kesko_tcp" }
