--- a/kesko/crates/kesko_core/Cargo.toml
+++ b/kesko/crates/kesko_core/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "kesko_core"
-version = "0.1.0"
+version = "0.0.3"
 edition = "2021"
 
 [dependencies]
 bevy = { workspace = true }
 serde = { version = "1.0.137", features = ["derive"] }
 serde_traitobject = "0.2.7"
-kesko_physics = { version = "0.1.0", path = "../kesko_physics" }
+
+kesko_physics = { path = "../kesko_physics" }
 kesko_object_interaction = { path = "../kesko_object_interaction"}
 kesko_raycast = { path = "../kesko_raycast" }
