--- a/kesko/crates/kesko_object_interaction/Cargo.toml
+++ b/kesko/crates/kesko_object_interaction/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "kesko_object_interaction"
-version = "0.1.0"
+version = "0.0.3"
 edition = "2021"
 
 [dependencies]
 bevy = { workspace = true }
-kesko_raycast = {version="0.1.0", path="../kesko_raycast"}
+
+kesko_raycast = { path="../kesko_raycast" }
