--- a/kesko/crates/kesko_tcp/Cargo.toml
+++ b/kesko/crates/kesko_tcp/Cargo.toml
@@ -8,7 +8,7 @@ bevy = { workspace = true }
 serde = "1.0.137"
 serde_json = "1.0.81"
 serde_traitobject = "0.2.7"
-iyes_loopless = { git = "https://github.com/IyesGames/iyes_loopless.git", branch = "main"}
+iyes_loopless = "0.8"
 
 kesko_core = { path = "../kesko_core" }
 kesko_physics = { path = "../kesko_physics" }
