--- a/kesko/Cargo.toml
+++ b/kesko/Cargo.toml
@@ -52,8 +52,9 @@ bevy = { version = "0.9.1", default-features = false, features = ["render", "bev
 
 pyo3 = { version = "0.17.2", features = ["extension-module"] }
 
-kesko_physics = { path = "crates/kesko_physics", features = ["f32"] }
+kesko_types = { path = "crates/kesko_types"}
 kesko_core = { path = "crates/kesko_core" }
+kesko_physics = { path = "crates/kesko_physics", features = ["f32"] }
 kesko_object_interaction = { path = "crates/kesko_object_interaction" }
 kesko_raycast = { path = "crates/kesko_raycast" }
 kesko_models = { path = "crates/kesko_models" }
