--- a/kesko/Cargo.toml
+++ b/kesko/Cargo.toml
@@ -45,15 +45,16 @@ opt-level = 3
 codegen-units = 1
 
 [workspace.dependencies]
-bevy = { version = "0.8.1", default-features = false, features = ["render", "bevy_winit", "bevy_scene", "x11"] }
+bevy = { version = "0.9.1", default-features = false, features = ["render", "bevy_winit", "bevy_scene", "x11", "bevy_asset"] }
 
 [dependencies]
-bevy = { version = "0.8.1", default-features = false, features = ["render", "bevy_winit", "bevy_scene", "x11"] }
+bevy = { version = "0.9.1", default-features = false, features = ["render", "bevy_winit", "bevy_scene", "x11", "bevy_asset"] }
 
 pyo3 = { version = "0.17.2", features = ["extension-module"] }
 
-kesko_physics = { path = "crates/kesko_physics", features = ["f32"] }
+kesko_types = { path = "crates/kesko_types"}
 kesko_core = { path = "crates/kesko_core" }
+kesko_physics = { path = "crates/kesko_physics", features = ["f32"] }
 kesko_object_interaction = { path = "crates/kesko_object_interaction" }
 kesko_raycast = { path = "crates/kesko_raycast" }
 kesko_models = { path = "crates/kesko_models" }
