--- a/kesko/Cargo.toml
+++ b/kesko/Cargo.toml
@@ -9,7 +9,7 @@ members = [
     "crates/kesko_plugins",
     "crates/kesko_ui",
     "crates/kesko_diagnostic",
-    "crates/kesko_tcp"
+    # "crates/kesko_tcp"
 ]
 
 [package]
@@ -24,8 +24,8 @@ path = "src/main.rs"
 [lib]
 name = "kesko"
 
-[[bin]]
-name = "kesko_tcp"
+# [[bin]]
+# name = "kesko_tcp"
 
 [[bin]]
 name = "kesko_tcp_headless"
@@ -45,12 +45,12 @@ opt-level = 3
 codegen-units = 1
 
 [workspace.dependencies]
-bevy = { version = "0.10.1", default-features = false, features = ["bevy_render", "bevy_winit", "bevy_scene", "x11", "bevy_asset"] }
+bevy = { version = "0.10.1", default-features = false, features = ["bevy_render", "bevy_winit", "bevy_scene", "x11", "bevy_asset", "bevy_pbr", "bevy_core_pipeline"] }
 
 [dependencies]
-bevy = { version = "0.10.1", default-features = false, features = ["bevy_render", "bevy_winit", "bevy_scene", "x11", "bevy_asset"] }
+bevy = { version = "0.10.1", default-features = false, features = ["bevy_render", "bevy_winit", "bevy_scene", "x11", "bevy_asset", "bevy_pbr", "bevy_core_pipeline"] }
 
-pyo3 = { version = "0.17.2", features = ["extension-module"] }
+pyo3 = { version = "0.18.3", features = ["extension-module"] }
 
 kesko_types = { path = "crates/kesko_types"}
 kesko_core = { path = "crates/kesko_core" }
@@ -60,4 +60,4 @@ kesko_raycast = { path = "crates/kesko_raycast" }
 kesko_models = { path = "crates/kesko_models" }
 kesko_plugins = { path="crates/kesko_plugins" }
 kesko_diagnostic = { path="crates/kesko_diagnostic" }
-kesko_tcp = { path = "crates/kesko_tcp" }
+# kesko_tcp = { path = "crates/kesko_tcp" }
