--- a/pykesko/Cargo.toml
+++ b/pykesko/Cargo.toml
@@ -8,7 +8,7 @@ name = "pykesko"
 crate-type = ["cdylib"]
 
 [dependencies]
-bevy = { version = "0.10.1", default-features = false, features = ["bevy_render", "bevy_winit", "bevy_scene", "x11"] }
+bevy = { version = "0.10.1", default-features = false, features = ["bevy_render", "bevy_winit", "bevy_scene", "x11", "bevy_asset", "bevy_pbr", "bevy_core_pipeline"] }
 kesko = { path = "../kesko"}
 pyo3 = { version = "0.18.3", features = ["extension-module"] }
 serde = { version = "1.0.137" }
